# zgroup-it-project-testcase

./: .env.example  .gitignore  README.md  Taskfile.yml  alembic.ini  docker-compose.yml  main.py  pyproject.toml
src/: settings.py
src/alembic/: env.py
src/alembic/versions/: 2024_10_05_1216-f4655884046d_add_resume_and_file_tables.py
src/api/: app.py  exceptions.py
src/api/resume/: __init__.py  endpoints.py  schemas.py
src/core/: exceptions.py  schema.py  utils.py
src/core/di/: __init__.py  _container.py
src/core/di/modules/: files.py  resume.py
src/core/files/: dto.py  exceptions.py  repository.py  service.py  storage.py
src/core/resume/: dto.py  repositories.py  services.py
src/db/: base.py  dependencies.py  engine.py
src/db/models/: __init__.py  file.py  resume.py
